add some responsive

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <th scope="col">Customer Contact</th>
         </tr>
         </thead>
-        <tbody class="bg-secondary text-white">
+        <tbody class="bg-secondary text-white ">
         <tr>
             <th>1</th>
             <td>Mark</td>
@@ -86,13 +86,13 @@
             <th>3</th>
             <td>Larry</td>
             <td>Honk Kong</td>
-            <td>45456504078998</td>
+            <td>4545650408</td>
         </tr>
         </tbody>
     </table>
 </div>
 
-<div style="position:absolute; right: 50px">
+<div style="position:absolute; right: 50px;">
     <button type="button" class="btn btn-outline-primary fw-bold">ADD</button>
     <button type="button" class="btn btn-outline-warning fw-bold">UPDATE</button>
     <button type="button" class="btn btn-outline-danger fw-bold">DELETE</button>
@@ -102,7 +102,7 @@
 
 <div class="container-fluid mt-5 " id="itemform">
     <h1 class="mx-3">Item Form</h1>
-    <table class="table table-hover border mt-3 p-3  ">
+    <table class="table table-hover border mt-3 p-3 ">
         <thead class="bg-info">
         <tr>
             <th scope="col">Item Code</th>
@@ -128,7 +128,7 @@
     </table>
 </div>
 
-<div style="position:absolute; right: 50px">
+<div style="position:absolute; right: 50px;">
     <button type="button" class="btn btn-outline-primary fw-bold">ADD</button>
     <button type="button" class="btn btn-outline-warning fw-bold">UPDATE</button>
     <button type="button" class="btn btn-outline-danger fw-bold">DELETE</button>
@@ -139,7 +139,7 @@
 <div class="container-fluid mt-5 " id="orderform">
     <h1 class="mx-3">Order Form</h1>
     <div class="row mt-3 p-3">
-        <div class="col-4">
+        <div class="col-xl-4 col-lg-6">
             <div class="bg-white card">
                 <div class="bg-danger card-header text-white" style="font-size: 25px">
                     Invoice Details
@@ -187,7 +187,7 @@
             </div>
         </div>
 
-        <div class="col-4">
+        <div class="col-xl-4 col-lg-6">
             <div class="bg-white card">
                 <div class="bg-danger card-header text-white" style="font-size: 25px">
                     Item Details
@@ -234,7 +234,7 @@
             </div>
         </div>
 
-        <div class="col-4">
+        <div class="col-xl-4 col-lg-12">
             <div class="bg-white card">
                 <div class="bg-danger card-header text-white" style="font-size: 25px">
                     Payment Details
