--- a/index.html
+++ b/index.html
@@ -60,41 +60,81 @@
 
 <div class="container-fluid mt-5" id="customerform">
     <h1 class="mx-3">Customer Form</h1>
-    <table class="table table-hover border mt-3 p-3">
-        <thead class="bg-info">
-        <tr>
-            <th scope="col">Customer ID</th>
-            <th scope="col">Customer Name</th>
-            <th scope="col">Customer Address</th>
-            <th scope="col">Customer Contact</th>
-        </tr>
-        </thead>
-        <tbody class="bg-secondary text-white ">
-        <tr>
-            <th>1</th>
-            <td>Mark</td>
-            <td>New York</td>
-            <td>2615587965</td>
-        </tr>
-        <tr>
-            <th>2</th>
-            <td>Jacob</td>
-            <td>Tokyo</td>
-            <td>2615587965</td>
-        </tr>
-        <tr>
-            <th>3</th>
-            <td>Larry</td>
-            <td>Honk Kong</td>
-            <td>4545650408</td>
-        </tr>
-        </tbody>
-    </table>
+    <div class="row mt-3 p-3">
+        <div class="col-xl-4 col-lg-6">
+            <div class="bg-white card">
+                <div class="bg-dark card-header text-white" style="font-size: 25px">
+                    Customer Details
+                </div>
+                <div class="card-body bg-white text-dark">
+                    <div class="row p-2 mt-3">
+                        <div class="form-group col-6">
+                            <lable>Customer ID:</lable>
+                            <input type="text" id="txtCustomerId0" class="form-control">
+                        </div>
+                        <div class="form-group col-6">
+                            <lable>Customer Name:</lable>
+                            <input type="text" id="txtCustomerName0" class="form-control" >
+                        </div>
+                    </div>
+                    <div class="row p-2 mt-3">
+                        <div class="form-group col-12">
+                            <lable>Customer Contact:</lable>
+                            <input type="text" id="txtCustomerContact0" class="form-control" >
+                        </div>
+                    </div>
+                    <div class="row p-2 mt-3">
+                        <div class="form-group col-12">
+                            <lable>Customer Address:</lable>
+                            <input type="text" id="txtCustomerAddress0" class="form-control" >
+                        </div>
+                    </div>
+                   <div class="row p-2 mt-3">
+                        <div class="form-group col-12">
+                            <button type="button" class="btn btn-outline-success fw-bold">Add</button>
+                            <button type="button" class="btn btn-outline-danger fw-bold">Cancel</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-xl-8 col-lg-6">
+            <table class="table table-hover border mt-3 p-3">
+                <thead class="bg-info">
+                <tr>
+                    <th scope="col">Customer ID</th>
+                    <th scope="col">Customer Name</th>
+                    <th scope="col">Customer Address</th>
+                    <th scope="col">Customer Contact</th>
+                </tr>
+                </thead>
+                <tbody class="bg-secondary text-white ">
+                <tr>
+                    <th>1</th>
+                    <td>Mark</td>
+                    <td>New York</td>
+                    <td>2615587965</td>
+                </tr>
+                <tr>
+                    <th>2</th>
+                    <td>Jacob</td>
+                    <td>Tokyo</td>
+                    <td>2615587965</td>
+                </tr>
+                <tr>
+                    <th>3</th>
+                    <td>Larry</td>
+                    <td>Honk Kong</td>
+                    <td>4545650408</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
 
 <div style="position:absolute; right: 50px;">
-    <button type="button" class="btn btn-outline-primary fw-bold">ADD</button>
-    <button type="button" class="btn btn-outline-warning fw-bold">UPDATE</button>
+   <button type="button" class="btn btn-outline-warning fw-bold">UPDATE</button>
     <button type="button" class="btn btn-outline-danger fw-bold">DELETE</button>
 </div>
 
@@ -102,34 +142,74 @@
 
 <div class="container-fluid mt-5 " id="itemform">
     <h1 class="mx-3">Item Form</h1>
-    <table class="table table-hover border mt-3 p-3 ">
-        <thead class="bg-info">
-        <tr>
-            <th scope="col">Item Code</th>
-            <th scope="col">Description</th>
-            <th scope="col">Qty On Hand</th>
-            <th scope="col">Unit Price</th>
-        </tr>
-        </thead>
-        <tbody class="bg-secondary text-white">
-        <tr>
-            <th>I001</th>
-            <td>Rice</td>
-            <td>50</td>
-            <td>110</td>
-        </tr>
-        <tr>
-            <th>I002</th>
-            <td>Coconut</td>
-            <td>100</td>
-            <td>85s</td>
-        </tr>
-        </tbody>
-    </table>
+    <div class="row mt-3 p-3">
+        <div class="col-xl-4 col-lg-6">
+            <div class="bg-white card">
+                <div class="bg-dark card-header text-white" style="font-size: 25px">
+                    Item Details
+                </div>
+                <div class="card-body bg-white text-dark">
+                    <div class="row p-2 mt-3">
+                        <div class="form-group col-6">
+                            <lable>Item Code:</lable>
+                            <input type="text" id="txtItemCode0" class="form-control">
+                        </div>
+                        <div class="form-group col-6">
+                            <lable>Item Description:</lable>
+                            <input type="text" id="txtDescription0" class="form-control" >
+                        </div>
+                    </div>
+                    <div class="row p-2 mt-3">
+                        <div class="form-group col-12">
+                            <lable>Quantity:</lable>
+                            <input type="text" id="txtQty0" class="form-control" >
+                        </div>
+                    </div>
+                    <div class="row p-2 mt-3">
+                        <div class="form-group col-12">
+                            <lable>Unit Price:</lable>
+                            <input type="text" id="txtUnitPrice0" class="form-control" >
+                        </div>
+                    </div>
+                    <div class="row p-2 mt-3">
+                        <div class="form-group col-12">
+                            <button type="button" class="btn btn-outline-success fw-bold">Add</button>
+                            <button type="button" class="btn btn-outline-danger fw-bold">Cancel</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-xl-8 col-lg-6">
+            <table class="table table-hover border mt-3 p-3 ">
+                <thead class="bg-info">
+                <tr>
+                    <th scope="col">Item Code</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Qty On Hand</th>
+                    <th scope="col">Unit Price</th>
+                </tr>
+                </thead>
+                <tbody class="bg-secondary text-white">
+                <tr>
+                    <th>I001</th>
+                    <td>Rice</td>
+                    <td>50</td>
+                    <td>110</td>
+                </tr>
+                <tr>
+                    <th>I002</th>
+                    <td>Coconut</td>
+                    <td>100</td>
+                    <td>85s</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
 
 <div style="position:absolute; right: 50px;">
-    <button type="button" class="btn btn-outline-primary fw-bold">ADD</button>
     <button type="button" class="btn btn-outline-warning fw-bold">UPDATE</button>
     <button type="button" class="btn btn-outline-danger fw-bold">DELETE</button>
 </div>
@@ -202,7 +282,7 @@
                         </div>
                         <div class="form-group col-6 ">
                             <lable>Item Code:</lable>
-                            <input type="text" id="txtItemCodde" class="form-control" disabled>
+                            <input type="text" id="txtItemCode" class="form-control" disabled>
                         </div>
                     </div>
                     <div class="row p-2 mt-3">
